# g-conx

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  PHASE_01_COMPLETE.md  README.md
client/: CMakeLists.txt  venus_icd.json.in
client/icd/: icd_device.h  icd_entrypoints.cpp  icd_entrypoints.h  icd_instance.h
client/icd/commands/: command_buffer_commands.cpp  commands_common.cpp  commands_common.h  descriptor_commands.cpp  device_commands.cpp  instance_commands.cpp  memory_commands.cpp  physical_device_commands.cpp  pipeline_commands.cpp  query_commands.cpp  resource_commands.cpp  sync_commands.cpp  wsi_commands.cpp
client/state/: command_buffer_state.cpp  command_buffer_state.h  device_state.cpp  device_state.h  handle_allocator.cpp  handle_allocator.h  instance_state.cpp  instance_state.h  pipeline_state.cpp  pipeline_state.h  query_state.cpp  query_state.h  resource_state.cpp  resource_state.h  shadow_buffer.cpp  shadow_buffer.h  swapchain_state.cpp  swapchain_state.h  sync_state.cpp  sync_state.h
client/wsi/: headless_wsi.cpp  linux_surface.cpp  linux_surface.h  linux_wsi.cpp  linux_wsi.h  platform_wsi.h  wayland_dmabuf_protocol.h
common/: CMakeLists.txt  branding.c  branding.h  host_image_copy_format_table.h  host_image_copy_utils.h  profiling.h  vkr_cs.h  vn_cs.h  vn_ring.h
common/network/: message.h  network_client.cpp  network_client.h  network_server.cpp  network_server.h  socket_utils.cpp  socket_utils.h
common/protocol/: frame_transfer.h  memory_transfer.h  remote_perf.h  venus_cs.cpp  venus_ring.cpp
common/utils/: logging.h  logging_bridge.cpp  logging_c.h
common/venus-protocol/: .gitignore  .gitlab-ci.yml  README  README.md  TODO  meson.build  vkxml.py  vn_protocol.py  vn_protocol_driver.h  vn_protocol_driver_acceleration_structure.h  vn_protocol_driver_buffer.h  vn_protocol_driver_buffer_view.h  vn_protocol_driver_command_buffer.h  vn_protocol_driver_command_pool.h  vn_protocol_driver_descriptor_pool.h  vn_protocol_driver_descriptor_set.h  vn_protocol_driver_descriptor_set_layout.h  vn_protocol_driver_descriptor_update_template.h  vn_protocol_driver_device.h  vn_protocol_driver_device_memory.h  vn_protocol_driver_event.h  vn_protocol_driver_fence.h  vn_protocol_driver_framebuffer.h  vn_protocol_driver_host_copy.h  vn_protocol_driver_image.h  vn_protocol_driver_image_view.h  vn_protocol_driver_instance.h  vn_protocol_driver_pipeline.h  vn_protocol_driver_pipeline_cache.h  vn_protocol_driver_private_data_slot.h  vn_protocol_driver_query_pool.h  vn_protocol_driver_queue.h  vn_protocol_driver_render_pass.h  vn_protocol_driver_sampler.h  vn_protocol_driver_sampler_ycbcr_conversion.h  vn_protocol_driver_semaphore.h  vn_protocol_driver_structs.h  vn_protocol_driver_transport.h  vn_protocol_driver_types.h  vn_protocol_renderer.h  (+38 more)
common/venus-protocol/docs/: VK_EXT_command_serialization.txt
common/venus-protocol/templates/: banner.in  common.h  driver.h  driver_commands.h  driver_cs.h  driver_defines.h  driver_handles.h  driver_info.h  driver_types.h  renderer.h  renderer_commands.h  renderer_cs.h  renderer_defines.h  renderer_dispatches.h  renderer_handles.h  renderer_info.h  renderer_types.h  renderer_util.h  types.h  types_chain.h  types_command.h  types_custom.h  types_handle.h  types_scalar.h  types_struct.h  types_union.h
common/venus-protocol/tests/: driver.c  main.c  meson.build  renderer.c  vkr_cs.h  vn_cs.h  vn_ring.h
common/venus-protocol/utils/: print_extensions.py  print_vk_command_types.py  update_vk_xml.sh
common/venus-protocol/xmls/: VK_EXT_command_serialization.xml  VK_MESA_venus_protocol.xml
docs/: ARCHITECTURE.md  BUILD_AND_RUN.md  DEVELOPMENT_ROADMAP.md  INDEX.md  PHASES_02_TO_10_SUMMARY.md  PHASE_01.md  PHASE_02.md  PHASE_03.md  PHASE_04.md  PHASE_05.md  PHASE_06.md  PHASE_07.md  PHASE_08.md  PHASE_09.md  PHASE_09_1.md  PHASE_09_2.md  PHASE_09_3.md  PHASE_10.md  PHASE_10_BASE.md  PHASE_10_LINUX.md  PHASE_10_MACOS.md  PHASE_10_WINDOWS.md  PROJECT_STRUCTURE.md  PUSH_DESCRIPTORS_PLAN.md  TESTING_STRATEGY.md  VENUS_PROTOCOL_INTEGRATION.md  VULKAN_1_3_COMPLETION_PLAN.md  VULKAN_1_4_READINESS_PLAN.md  coherence_performance_plan.md  perf_findings.md  remote_perf_plan.md
server/: CMakeLists.txt  main.cpp  renderer_decoder.c  renderer_decoder.h  server_state.cpp  server_state.h  server_state_bridge.h
server/memory/: memory_transfer.cpp  memory_transfer.h
server/state/: binding_validator.cpp  binding_validator.h  command_buffer_state.cpp  command_buffer_state.h  command_validator.cpp  command_validator.h  fake_gpu_data.cpp  fake_gpu_data.h  fake_gpu_data_bridge.cpp  fake_gpu_data_bridge.h  handle_map.h  memory_requirements.cpp  memory_requirements.h  resource_tracker.cpp  resource_tracker.h  sync_manager.cpp  sync_manager.h
server/vulkan/: vulkan_context.cpp  vulkan_context.h
server/wsi/: swapchain_manager.cpp  swapchain_manager.h
test-app/: CMakeLists.txt  logging.h  main.cpp
test-app/phase01/: network_test.cpp  phase01_test.cpp  phase01_test.h
test-app/phase02/: phase02_test.cpp  phase02_test.h
test-app/phase03/: phase03_test.cpp  phase03_test.h
test-app/phase04/: phase04_test.cpp  phase04_test.h
test-app/phase05/: phase05_test.cpp  phase05_test.h
test-app/phase06/: phase06_test.cpp  phase06_test.h
test-app/phase07/: phase07_test.cpp  phase07_test.h
test-app/phase08/: phase08_test.cpp  phase08_test.h
test-app/phase09/: phase09_test.cpp  phase09_test.h
test-app/phase09/shaders/: simple_add.comp
test-app/phase09_1/: phase09_1_test.cpp  phase09_1_test.h
test-app/phase10/: phase10_test.cpp  phase10_test.h
test-app/phase10/shaders/: triangle.frag  triangle.vert
test-app/phase11/: phase11_test.cpp  phase11_test.h
test-app/phase12/: phase12_test.cpp  phase12_test.h
test-app/phase13/: phase13_test.cpp  phase13_test.h
test-app/phase14/: phase14_test.cpp  phase14_test.h
